@@ -1,6 +1,4 @@
 a.out
 maketab
 proctab.c
-ytab.c
-ytab.h
 *.o
